--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -81,7 +81,7 @@ jobs:
         # because the /actions/checkoutv3 action checks out code on the host and then mounts it;
         # this causes many file permission issues (especially with images using older Git versions).
         mkdir /isolated_build/ ; cd /isolated_build/
-        HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{github.token}}@" $1; }'`
+        HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
         echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
         git clone $HTTPS_PATH_WITH_TOKEN repo
         cd repo
@@ -119,7 +119,7 @@ jobs:
     - name: Checkout repo _into_ container
       run: |
           mkdir /isolated_build/ ; cd /isolated_build/
-          HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{github.token}}@" $1; }'`
+          HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
           echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
           git clone $HTTPS_PATH_WITH_TOKEN repo
           cd repo
@@ -152,7 +152,7 @@ jobs:
     - name: Checkout repo _into_ container
       run: |
           mkdir /isolated_build/ ; cd /isolated_build/
-          HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{github.token}}@" $1; }'`
+          HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
           echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
           git clone $HTTPS_PATH_WITH_TOKEN repo
           cd repo
@@ -205,7 +205,7 @@ jobs:
     - name: Checkout repo _into_ container
       run: |
             mkdir /isolated_build/ ; cd /isolated_build/
-            HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{github.token}}@" $1; }'`
+            HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
             echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
             git clone $HTTPS_PATH_WITH_TOKEN repo
             cd repo
