Fix pipeline token (#419)
* Change build-common to use github.token

* Use GITHUB_TOKEN

* Add mustashe notation

* Correct to secrets.GITHUB_TOKEN

* Display secrets for debugging

* Debug: Display full clone path

* wait 10 minutes during clone

* debug timing

* Added oauth2 to clone url

* Remove delay.

* Full build

* Clean out debug content in pipeline

--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -1,12 +1,6 @@
 name: 415-hha_cbr/cbr-platform
 # Main GitHub CI/CD pipeline definition file
 # For syntax, see: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
-#
-# TODO:
-# - Switch from CI/CD pipeline containing build & test commands to having Dockerfile
-#   build the image and run tests inside the image it's building so only building code once (repeatable)
-# - Add check to caddy/Dockerfile for syntax of Caddyfile: RUN caddy validate --config /etc/caddy/Caddyfile
-#   (test is currently skipped)
 
 on:
   push:
@@ -43,11 +37,11 @@ jobs:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo '$GITHUB_CONTEXT'
+        run: echo "$GITHUB_CONTEXT"
       - name: Dump job context
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
-        run: echo '$JOB_CONTEXT'
+        run: echo "$JOB_CONTEXT"
       - name: Dump steps context
         env:
           STEPS_CONTEXT: ${{ toJson(steps) }}
@@ -63,7 +57,17 @@ jobs:
       - name: Dump matrix context
         env:
           MATRIX_CONTEXT: ${{ toJson(matrix) }}
-        run: echo '$MATRIX_CONTEXT'
+        run: echo "$MATRIX_CONTEXT"
+      # - name: Display Secrets
+      #   env:
+      #     SECRET_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      #     GITHUB_TOKEN: ${{github.token}}
+      #   run: |
+      #     # Print secrets to the screen by spacing them out so GitHub does not obscure them with *s
+      #     echo "1: ${{secrets.GITHUB_TOKEN}}" | sed 's/./& /g'
+      #     echo "2: ${{github.token}}" | sed 's/./& /g'
+      #     echo "3: $SECRET_TOKEN" | sed 's/./& /g'
+      #     echo "4: $GITHUB_TOKEN" | sed 's/./& /g'
 
   build-common:
     runs-on: [self-hosted, docker]
@@ -74,20 +78,20 @@ jobs:
     - name: Checkout repo _into_ container
       run: |
         # NOTE: This code is **copied** into all jobs that needs code inside a container because 
-        # each job has its own container (must checkout the code there) and reusable workflows
-        # cannot be called as steps in a job: they must be the entire job.
+        # each job has its own container (must checkout the code there). Reusable workflows don't
+        # work here because tehy cannot be called as steps in a job: they must be the entire job.
         # 
         # Checkout the correct branch of the repo _into_ a container (without using mounts)
         # because the /actions/checkoutv3 action checks out code on the host and then mounts it;
         # this causes many file permission issues (especially with images using older Git versions).
+        # NOTE: Added 'oauth2:' to the clone URL (https://stackoverflow.com/questions/42148841/github-clone-with-oauth-access-token)
         mkdir /isolated_build/ ; cd /isolated_build/
-        HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
-        echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
+        HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://oauth2:${{ secrets.GITHUB_TOKEN }}@" $1; }'`
+        echo "Cloning from '$HTTPS_PATH_WITH_TOKEN' (it should be https://oauth2:<password>@<url>.<user>.<repo>)"
         git clone $HTTPS_PATH_WITH_TOKEN repo
         cd repo
-
         # Name a new branch after the ref-spec we were given (stripping off leading 'refs/')
-        # 'github.ref' is "refs/heads/main" for code on `main`; or "refs/pull/5/merge" for MRs (ex)
+        # '${{github.ref}}' is "refs/heads/main" for code on `main`; or "refs/pull/5/merge" for MRs (ex)
         export FETCH_REF=`echo ${{ github.ref }} | cut -c 6-`
         echo "Fetching ref '${{ github.ref }}', which is branch '${{ github.ref_name }}' using refspec '$FETCH_REF'"        
         git fetch origin $FETCH_REF:my_build_branch
@@ -118,21 +122,20 @@ jobs:
     steps:
     - name: Checkout repo _into_ container
       run: |
-          mkdir /isolated_build/ ; cd /isolated_build/
-          HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
-          echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
-          git clone $HTTPS_PATH_WITH_TOKEN repo
-          cd repo
-          export FETCH_REF=`echo ${{ github.ref }} | cut -c 6-`
-          echo "Fetching ref '${{ github.ref }}', which is branch '${{ github.ref_name }}' using refspec '$FETCH_REF'"        
-          git fetch origin $FETCH_REF:my_build_branch
-          git checkout my_build_branch
-          echo "Resetting to SHA '${{ github.sha }}'"
-          git reset --hard ${{ github.sha }}
+        mkdir /isolated_build/ ; cd /isolated_build/
+        HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://oauth2:${{ secrets.GITHUB_TOKEN }}@" $1; }'`
+        echo "Cloning from '$HTTPS_PATH_WITH_TOKEN' (it should be https://<password>@<url>.<user>.<repo>)"
+        git clone $HTTPS_PATH_WITH_TOKEN repo
+        cd repo
+        export FETCH_REF=`echo ${{ github.ref }} | cut -c 6-`
+        echo "Fetching ref '${{ github.ref }}', which is branch '${{ github.ref_name }}' using refspec '$FETCH_REF'"        
+        git fetch origin $FETCH_REF:my_build_branch
+        git checkout my_build_branch        
+        echo "Resetting to SHA '${{ github.sha }}'"
+        git reset --hard ${{ github.sha }}
     - name: Install NPM globally & Build mobile
       run:  |
         set -x  # echo commands names
-
         npm install -g npm@$NPM_VERSION
         npm uninstall @cbr/common
         COMMON_PACK_NAME=$(npm pack ../common | tail -n 1)
@@ -151,17 +154,17 @@ jobs:
     steps:
     - name: Checkout repo _into_ container
       run: |
-          mkdir /isolated_build/ ; cd /isolated_build/
-          HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
-          echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
-          git clone $HTTPS_PATH_WITH_TOKEN repo
-          cd repo
-          export FETCH_REF=`echo ${{ github.ref }} | cut -c 6-`
-          echo "Fetching ref '${{ github.ref }}', which is branch '${{ github.ref_name }}' using refspec '$FETCH_REF'"        
-          git fetch origin $FETCH_REF:my_build_branch
-          git checkout my_build_branch
-          echo "Resetting to SHA '${{ github.sha }}'"
-          git reset --hard ${{ github.sha }}
+        mkdir /isolated_build/ ; cd /isolated_build/
+        HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://oauth2:${{ secrets.GITHUB_TOKEN }}@" $1; }'`
+        echo "Cloning from '$HTTPS_PATH_WITH_TOKEN' (it should be https://<password>@<url>.<user>.<repo>)"
+        git clone $HTTPS_PATH_WITH_TOKEN repo
+        cd repo
+        export FETCH_REF=`echo ${{ github.ref }} | cut -c 6-`
+        echo "Fetching ref '${{ github.ref }}', which is branch '${{ github.ref_name }}' using refspec '$FETCH_REF'"        
+        git fetch origin $FETCH_REF:my_build_branch
+        git checkout my_build_branch        
+        echo "Resetting to SHA '${{ github.sha }}'"
+        git reset --hard ${{ github.sha }}
     - name: Install NPM
       run:  npm install -g npm@$NPM_VERSION
     - name: Build common
@@ -204,17 +207,17 @@ jobs:
     steps:
     - name: Checkout repo _into_ container
       run: |
-            mkdir /isolated_build/ ; cd /isolated_build/
-            HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://${{secrets.ACCESS_TOKEN}}@" $1; }'`
-            echo "Cloning from '$HTTPS_PATH_WITH_TOKEN'"
-            git clone $HTTPS_PATH_WITH_TOKEN repo
-            cd repo
-            export FETCH_REF=`echo ${{ github.ref }} | cut -c 6-`
-            echo "Fetching ref '${{ github.ref }}', which is branch '${{ github.ref_name }}' using refspec '$FETCH_REF'"        
-            git fetch origin $FETCH_REF:my_build_branch
-            git checkout my_build_branch
-            echo "Resetting to SHA '${{ github.sha }}'"
-            git reset --hard ${{ github.sha }}
+        mkdir /isolated_build/ ; cd /isolated_build/
+        HTTPS_PATH_WITH_TOKEN=`echo ${{ github.repositoryUrl }} | awk '{ gsub(/git:\/\//, "\n" ); print "https://oauth2:${{ secrets.GITHUB_TOKEN }}@" $1; }'`
+        echo "Cloning from '$HTTPS_PATH_WITH_TOKEN' (it should be https://<password>@<url>.<user>.<repo>)"
+        git clone $HTTPS_PATH_WITH_TOKEN repo
+        cd repo
+        export FETCH_REF=`echo ${{ github.ref }} | cut -c 6-`
+        echo "Fetching ref '${{ github.ref }}', which is branch '${{ github.ref_name }}' using refspec '$FETCH_REF'"        
+        git fetch origin $FETCH_REF:my_build_branch
+        git checkout my_build_branch        
+        echo "Resetting to SHA '${{ github.sha }}'"
+        git reset --hard ${{ github.sha }}
     - name: Install dependencies
       run:  pip install -r requirements.txt
       working-directory: /isolated_build/repo/server
@@ -254,7 +257,7 @@ jobs:
           export IMAGE_TAG=v$(git show -s --format=%cs ${{ github.sha }}).`git rev-parse --short=8 ${{ github.sha }}`
           echo "IMAGE_TAG = '$IMAGE_TAG'"
           # NOTE: On github action runner v2.297 or higher, should redirect echo output to GITHUB_OUTPUT:
-          # echo "tag=$IMAGE_TAG" >> "$GITHUB_OUTPUT"
+          #    `echo "tag=$IMAGE_TAG" >> "$GITHUB_OUTPUT"`
           # However, as of July 2023, SFU's GitHub runner is v2.296.x, so using old syntax (which works on newer)
           # https://github.blog/changelog/2022-10-11-github-actions-deprecating-save-state-and-set-output-commands/
           echo "::set-output name=tag::$IMAGE_TAG"
