--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -13,6 +13,7 @@ env:
   HUB_REPO_FRONTEND: "${{ secrets.HUB_REPO_FRONTEND }}"
   HUB_TOKEN: "${{ secrets.HUB_TOKEN }}"
   HUB_USER: "${{ secrets.HUB_USER }}"
+  GRAFANA_API_KEY: "${{ secrets.GRAFANA_API_KEY }}"
   NPM_VERSION: 7.19.0
   CLONE_DEPTH: 50
   # Keep npm's cache out of home directory (mounted from host)
