--- a/.github/workflows/mirror-to-github.yml
+++ b/.github/workflows/mirror-to-github.yml
@@ -14,7 +14,7 @@ jobs:
   mirror-to-githubcom:
     runs-on: [self-hosted, docker]
     container:
-      image: ubuntu-22.04
+      image: ubuntu:22.04
     steps:
       - name: Display arguments from GitHub "secrets"
         run: |
