--- a/fluentbit/fluent-bit.conf
+++ b/fluentbit/fluent-bit.conf
@@ -25,10 +25,10 @@
     Buffer_Chunk_Size 1M
     Buffer_Max_Size   6M
 
-[INPUT]
-    name            node_exporter_metrics
-    tag             node_metrics
-    scrape_interval 2
+# [INPUT]
+#     name            node_exporter_metrics
+#     tag             node_metrics
+#     scrape_interval 2
 
 [INPUT]
     name            fluentbit_metrics
