--- a/.github/workflows/main-cicd.yml
+++ b/.github/workflows/main-cicd.yml
@@ -267,7 +267,7 @@ jobs:
     needs: [build-common, build-mobile, build-web, build-server, export-image-tag]
     # needs: [export-image-tag]   # Used for faking and testing
     runs-on: [self-hosted, docker]
-    if: ${{ github.ref_name == 'main' }}
+    # if: ${{ github.ref_name == 'main' }}
     timeout-minutes: 60
     env:
       IMAGE_TAG: ${{ needs.export-image-tag.outputs.image_tag}}
@@ -321,7 +321,7 @@ jobs:
 #   Development (dev) server
   dev-server-deploy-from-dockerhub:
     needs: [build-docker-publish-docker-images, export-image-tag]
-    if: ${{ github.ref_name == 'main' }}
+    # if: ${{ github.ref_name == 'main' }}
     uses: ./.github/workflows/deploy-from-dockerhub.yml
     with:
       RUNNER_NAME: deploy-development
