--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -13,7 +13,7 @@ services:
     image: fluent/fluent-bit:latest
     volumes:
       - ./fluentbit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
-      - :/output     # Anonymoust volume to keep files out of file system, but still accessible
+      - /output     # Anonymous volume to keep files out of file system, but still accessible
       - django_logs:/logs/django:ro
       - fluentbit_logs_db:/persist
     ports:
