Mirror to GitHub.com when production branch changes (#435)

--- a/.github/workflows/mirror-to-github.yml
+++ b/.github/workflows/mirror-to-github.yml
@@ -2,7 +2,7 @@ name: Mirror Repo
 # Mirror the project to GitHub.com
 on:
   push:
-    branches: [ main, staging ]
+    branches: [ main, staging, production ]
   workflow_dispatch:
 
 jobs:
